# PnaYAVU_3_sem

./: .gitignore  Category.cpp  Category.h  ClassDiagram.cd  CoffeeHouse.db  CoffeeHouseSoftware.vcxproj  CoffeeHouseSoftware.vcxproj.filters  ConsoleApplication1.vcxproj  ConsoleApplication1.vcxproj.filters  Main.cpp  Makefile  Menu.cpp  Menu.h  MenuOption.h  MenuSystem.cpp  MenuSystem.h  Order.cpp  README.md  main.cpp  sonar-project.properties
.github/workflows/: build.yml
SQLite/: sqlite3.lib
src/: Account.cpp  Account.h  Admin.cpp  Admin.h  AnimatedButton.cpp  AnimatedButton.h  Buyer.cpp  Buyer.h  CMakeLists.txt  Category.h  CoffeeHouse.db  Database.cpp  Database.h  LoyaltySystem.cpp  LoyaltySystem.h  Makefile  Manager.cpp  Manager.h  Menu.cpp  Menu.h  MenuOption.cpp  MenuOption.h  Order.cpp  Order.h  Person.h  adminwindow.cpp  adminwindow.h  buyerwindow.cpp  buyerwindow.h  buyerwindow.ui  cartwindow.cpp  cartwindow.h  categorieslist.cpp  categorieslist.h  changeoptiondiscount.cpp  changeoptiondiscount.h  changeoptionprice.cpp  changeoptionprice.h  chooseoptionwidget.cpp  chooseoptionwidget.h  (+30 more)
src/cpp/: Account.cpp  Admin.cpp  Buyer.cpp  Category.cpp  Database.cpp  LoyaltySystem.cpp  Manager.cpp  Menu.cpp  MenuOption.cpp  Order.cpp  main.cpp
src/h/: Account.h  Database.h  Menu.h
src/header/: Account.h  Admin.h  Buyer.h  Database.h  LoyaltySystem.h  Manager.h  Menu.h  MenuOption.h  Order.h  Person.h
src/include/: MenuOption.h
x64/Debug/: vc143.idb
x64/Debug/ConsoleA.e95fb785.tlog/: ConsoleApplication1.lastbuildstate
x64/Release/: CoffeeHouseSoftware.exe.recipe  CoffeeHouseSoftware.iobj  CoffeeHouseSoftware.ipdb  ConsoleApplication1.exe.recipe  ConsoleApplication1.iobj  ConsoleApplication1.ipdb
x64/Release/CoffeeHo.97cd7a1b.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CoffeeHouseSoftware.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
x64/Release/ConsoleA.e95fb785.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  ConsoleApplication1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
